@@ -96,8 +96,8 @@ int
 _eddsa_verify (const struct ecc_curve *ecc,
 	       const struct nettle_hash *H,
 	       const uint8_t *pub,
-	       void *ctx,
 	       const mp_limb_t *A,
+	       void *ctx,
 	       size_t length,
 	       const uint8_t *msg,
 	       const uint8_t *signature,
